# india-fund-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: cache_warmup.yml  ci_guardian.yml  keep_alive.yml
.streamlit/: config.toml
app/: main.py
app/components/: charts.py
app/core/: analytics.py  data_fetcher.py  logger.py
data/cache/: 101762.csv  102207.csv  118278.csv  118535.csv  118632.csv  118650.csv  118668.csv  118778.csv  118825.csv  118834.csv  118950.csv  118955.csv  118968.csv  118989.csv  119018.csv  119062.csv  119071.csv  119128.csv  119598.csv  119609.csv  119716.csv  119718.csv  119721.csv  119727.csv  119775.csv  119835.csv  120158.csv  120166.csv  120251.csv  120334.csv  120344.csv  120348.csv  120366.csv  120377.csv  120465.csv  120505.csv  120596.csv  120828.csv  122639.csv  125354.csv  (+11 more)
scripts/: find_codes.py  pre_warm_cache.py  wake_app.py
tests/: test_analytics.py
