[project]
name = "india-fund-analytics"
version = "0.1.4"
description = "A high-performance quantitative analysis dashboard for Indian Mutual Funds."
authors = [
    {name = "Convexica", email = "app@convexica.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "yfinance",
    "scipy",
    "statsmodels",
    "playwright",
    "requests"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
    "types-requests"
]

[project.urls]
"Homepage" = "https://india-fund-analytics.streamlit.app/"
"Repository" = "https://github.com/convexica/india-fund-analytics"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
