[project]
name = "convexlab"
version = "1.1.0"
description = "Institutional-Grade Mutual Fund Analytics & AI Synthesis Engine"
authors = [
    {name = "Convexica", email = "app@convexica.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "yfinance",
    "scipy",
    "statsmodels",
    "playwright",
    "requests",
    "google-generativeai",
    "groq"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
    "types-requests"
]

[project.urls]
"Homepage" = "https://convexlab.streamlit.app/"
"Repository" = "https://github.com/convexica/convexlab"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
package = false
